--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,18 +15,37 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
-#logging:
-#  level:
-#    root: DEBUG
-#    org.springframework: DEBUG
-#
-#eureka:
-#  client:
-#    service-url:
-#      defaultZone: http://localhost:8761/eureka/
+  mail:
+    host: smtp.yandex.ru
+    port: 587
+    username: ChromayKonyshka
+    password: xhbmeictzjihsizr
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enabled: true
+            required: true
+
+logging:
+  level:
+    root: INFO
+    org.springframework: DEBUG
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
 jwt:
   token:
     secret:
       access: 984hg493gh0439rthr0429uruj2309yh937gc763fe87t3f89723gf
     duration: 60
+
+#SMTP Config
+smtp:
+  mail:
+    name: i@andrewkononov.ru
+
